--- a/basics/main.css
+++ b/basics/main.css
@@ -1,3 +1,12 @@
 section {
-    background: #ff1b68;
+    background: #046815;
+}
+
+h1 {
+    color: white;
+    font-family: 'Anton', sans-serif;
+}
+
+.section-title {
+    color: #2ddf5c;
 }
