--- a/basics/main.css
+++ b/basics/main.css
@@ -1,4 +1,4 @@
-section {
+#product-overview {
     background: #046815;
 }
 
@@ -8,5 +8,5 @@ h1 {
 }
 
 .section-title {
-    color: #2ddf5c;
+    color: #ff1b68;
 }
