--- a/basics/main.css
+++ b/basics/main.css
@@ -1,9 +1,22 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 #product-overview {
     background: #046815;
+    width: 100%;
+    height: 528px;
+    padding: 10px;
+    /* border-style: solid;
+    border-color: black;
+    border-width: 5px; */
+    border: 5px solid black;
+    margin: 10px;
 }
 
 #product-overview h1 {
