--- a/basics/main.css
+++ b/basics/main.css
@@ -15,8 +15,8 @@ body {
     /* border-style: solid;
     border-color: black;
     border-width: 5px; */
-    border: 5px solid black;
-    margin: 10px;
+    /* border: 5px solid black;
+    margin: 10px; */
 }
 
 #product-overview h1 {
@@ -32,3 +32,29 @@ body {
 /* h1 {
     font-family: sans-serif;
 } */
+
+.main-header {
+    width: 100%;
+    background: #0a0a0a;
+    padding: 8px 16px;
+}
+
+.main-header > div {
+    display: inline-block;
+}
+
+.main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 54px);
+}
+
+.main-nav__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.main-nav__item {
+    display: inline-block;
+}
