--- a/basics/main.css
+++ b/basics/main.css
@@ -8,7 +8,8 @@ body {
 }
 
 #product-overview {
-    background: #046815;
+    /* background: #046815; */
+    background: url("freedom.jpg");
     width: 100%;
     height: 528px;
     padding: 10px;
@@ -72,4 +73,36 @@ body {
 .main-nav__item a {
     text-decoration: none;
     color: #0e4f1f;
+    font-weight: bold;
+    padding: 3px 0;
 }
+
+/* .main-nav__item a::after {
+    content: " (link)";
+    color: red;
+} */
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+    color: white;
+    border-bottom: 5px solid white;
+}
+
+.main-nav__item--cta a {
+    color: white;
+    background: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    color: #ff1b68;
+    background: white;
+    border: none;
+}
+
+/* p::first-letter {
+    color: red;
+    font-size: 20px;
+} */
