--- a/basics/main.css
+++ b/basics/main.css
@@ -86,7 +86,7 @@ body {
     margin: 8px 0;
 }
 
-.button {
+/* .button {
     background: #0e4f1f;
     color: white;
     font: inherit;
@@ -105,7 +105,7 @@ body {
 
 .button:focus {
     outline: none;
-}
+} */
 
 #key-features {
     background: #ff1b68;
@@ -151,7 +151,7 @@ body {
     font-family: sans-serif;
 } */
 
-.main-header {
+/* .main-header {
     width: 100%;
     background: #0a0a0a;
     padding: 8px 16px;
@@ -245,7 +245,7 @@ body {
 .main-footer__link a:hover,
 .main-footer__link a:active {
     color: #ccc;
-}
+} */
 
 
 /* p::first-letter {
