--- a/positioning/main.css
+++ b/positioning/main.css
@@ -18,6 +18,7 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
+  overflow: hidden;
 }
   
 .parent div {
@@ -28,7 +29,7 @@ body {
   margin: 10px;
 }
 
-.parent .child-1 {
+/* .parent .child-1 {
   position: fixed;
   width: 400px;
   top: 0;
@@ -36,4 +37,10 @@ body {
   margin: 0;
   width: 100%;
   box-sizing: border-box;
+} */
+
+.parent .child-1 {
+  position: relative;
+  top: 50px;
+  left: 50px;
 }
