--- a/positioning/main.css
+++ b/positioning/main.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #fa923f;
+  background: #e6dbd2;
   padding: 20px;
   border: 5px solid black;
   margin: 0;
@@ -18,10 +18,28 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
   
-.parent div {
+/* .parent div {
+  background: rgb(105, 105, 109);
+  color: white;
+  padding: 10px;
+  border: 5px solid black;
+  margin: 10px;
+} */
+
+.parent .country {
+  background: #fa923f;
+  color: white;
+  padding: 10px;
+  border: 5px solid black;
+  margin: 10px;
+  position: sticky;
+  top: 20px;
+}
+
+.parent .cities {
   background: rgb(105, 105, 109);
   color: white;
   padding: 10px;
@@ -39,8 +57,8 @@ body {
   box-sizing: border-box;
 } */
 
-.parent .child-1 {
+/* .parent .child-1 {
   position: relative;
   top: 50px;
   left: 50px;
-}
+} */
