--- a/basics/main.css
+++ b/basics/main.css
@@ -13,11 +13,13 @@ body {
     width: 100%;
     height: 528px;
     padding: 10px;
+    margin-top: 20px;
     /* border-style: solid;
     border-color: black;
     border-width: 5px; */
     /* border: 5px solid black;
     margin: 10px; */
+    
 }
 
 #product-overview h1 {
