--- a/basics/main.css
+++ b/basics/main.css
@@ -19,12 +19,15 @@ body {
     border-width: 5px; */
     /* border: 5px solid black;
     margin: 10px; */
-    
+    position: relative;
 }
 
 #product-overview h1 {
     color: white;
     font-family: 'Anton', sans-serif;
+    position: absolute;
+    left: 5%;
+    bottom: 3%;
 }
 
 .section-title {
