--- a/basics/main.css
+++ b/basics/main.css
@@ -9,7 +9,13 @@ body {
 
 #product-overview {
     /* background: #046815; */
-    background: url("freedom.jpg");
+    background: url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box;
+    /* background-image: url("freedom.jpg");
+    background-size: cover;
+    background-position: left 10% bottom 20%;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    background-clip: border-box; */
     width: 100%;
     height: 528px;
     padding: 10px;
