--- a/basics/main.css
+++ b/basics/main.css
@@ -9,13 +9,15 @@ body {
 
 #product-overview {
     /* background: #046815; */
-    background: url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box;
+    /* background: url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box; */
     /* background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%;
     background-repeat: no-repeat;
     background-origin: border-box;
     background-clip: border-box; */
+    /* background-image: linear-gradient(to bottom red,blue); */
+    background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green);
     width: 100%;
     height: 528px;
     padding: 10px;
