--- a/basics/main.css
+++ b/basics/main.css
@@ -9,7 +9,9 @@ body {
 
 #product-overview {
     /* background: #046815; */
-    /* background: url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box; */
+    background: linear-gradient(to top, rgba(80, 60, 18, 0.6) 10%, transparent),
+     url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box,
+      red;
     /* background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%;
@@ -17,7 +19,7 @@ body {
     background-origin: border-box;
     background-clip: border-box; */
     /* background-image: linear-gradient(to bottom red,blue); */
-    background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green);
+    /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
     width: 100%;
     height: 528px;
     padding: 10px;
@@ -157,6 +159,7 @@ body {
     border: 2px solid #424242;
     border-radius: 50%;
     margin: auto;
+    padding: 20px;
 }
 
 .key-feature__description {
