--- a/basics/main.css
+++ b/basics/main.css
@@ -22,8 +22,8 @@ body {
     /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
     width: 100%;
     height: 528px;
-    padding: 10px;
-    margin-top: 20px;
+    /* padding: 1.38rem; */
+    margin-top: 2.75rem;
     /* border-style: solid;
     border-color: black;
     border-width: 5px; */
@@ -56,8 +56,8 @@ body {
 .plan {
     background-color: #d5ffdc;
     text-align: center;
-    padding: 16px;
-    margin: 8px;
+    padding: 1rem;
+    margin: 0.5rem;
     display: inline-block;
     width: 30%;
     vertical-align: middle;
@@ -72,7 +72,7 @@ body {
 .plan__annotation {
     background: white;
     color: #19b84c;
-    padding: 8px;
+    padding: 0.5rem;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
 }
@@ -104,7 +104,7 @@ body {
 } */
 
 .plan__feature {
-    margin: 8px 0;
+    margin: 0.5rem 0;
 }
 
 /* .button {
@@ -130,13 +130,13 @@ body {
 
 #key-features {
     background: #ff1b68;
-    margin-top: 80px;
-    padding: 16px;
+    margin-top: 5rem;
+    padding: 1rem;
 }
 
 #key-features .section-title {
     color: white;
-    margin: 32px;
+    margin: 2rem;
 }
 
 .key-feature__list {
@@ -159,14 +159,14 @@ body {
     border: 2px solid #424242;
     border-radius: 50%;
     margin: auto;
-    padding: 20px;
+    padding: 1.5rem;
 }
 
 .key-feature__description {
     text-align: center;
     font-weight: bold;
     color: white;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 /* h1 {
