--- a/basics/main.css
+++ b/basics/main.css
@@ -10,7 +10,7 @@ body {
 #product-overview {
     /* background: #046815; */
     background: linear-gradient(to top, rgba(80, 60, 18, 0.6) 10%, transparent),
-     url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box,
+     url("images/freedom.jpg") left 10% bottom 70%/cover no-repeat border-box,
       red;
     /* background-image: url("freedom.jpg");
     background-size: cover;
@@ -20,8 +20,8 @@ body {
     background-clip: border-box; */
     /* background-image: linear-gradient(to bottom red,blue); */
     /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
-    width: 100%;
-    height: 528px;
+    width: 100vw;
+    height: 33vh;
     /* padding: 1.38rem; */
     margin-top: 2.75rem;
     /* border-style: solid;
