--- a/basics/main.css
+++ b/basics/main.css
@@ -10,7 +10,7 @@ body {
 #product-overview {
     /* background: #046815; */
     background: linear-gradient(to top, rgba(80, 60, 18, 0.6) 10%, transparent),
-     url("images/freedom.jpg") left 10% bottom 70%/cover no-repeat border-box,
+     url("images/freedom.jpg") center/cover no-repeat border-box,
       red;
     /* background-image: url("freedom.jpg");
     background-size: cover;
@@ -38,6 +38,29 @@ body {
     position: absolute;
     left: 5%;
     bottom: 3%;
+    font-size: 1.6rem;
+}
+
+@media (min-width: 40rem) {
+    #product-overview {
+        height: 40vh;
+        background-position: 50% 25%;
+    }
+
+    #product-overview h1 {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 60rem) {
+    #product-overview {
+        height: 50vh;
+        background-position: 50% 25%;
+    }
+
+    #product-overview h1 {
+        font-size: 5rem;
+    }
 }
 
 .section-title {
