--- a/responsiveness/main.css
+++ b/responsiveness/main.css
@@ -43,16 +43,87 @@ body {
 
 @media (min-width: 40rem) {
     #product-overview {
-        height: 40vh;
-        background-position: 50% 25%;
+      height: 40vh;
+      background-position: 50% 25%;
     }
-
+  
     #product-overview h1 {
-        font-size: 3rem;
+      font-size: 3rem;
+    }
+}
+  
+.section-title {
+    color: #2ddf5c;
+    text-align: center;
+}
+  
+.plan {
+    background: #d5ffdc;
+    text-align: center;
+    padding: 1rem;
+    margin: 0.5rem 0;
+    width: 100%;
+}
+  
+.plan--highlighted {
+    background: #19b84c;
+    color: white;
+}
+  
+.plan__annotation {
+    background: white;
+    color: #19b84c;
+    padding: 0.5rem;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+}
+  
+.plan__title {
+    color: #0e4f1f;
+}
+  
+.plan__price {
+    color: #858585;
+}
+  
+.plan--highlighted .plan__title {
+    color: white;
+}
+  
+.plan--highlighted .plan__price {
+    color: #0e4f1f;
+}
+  
+.plan__features {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+  
+.plan__feature {
+    margin: 0.5rem 0;
+}
+  
+@media (min-width: 40rem) {
+    .plan__list {
+      width: 100%;
+      text-align: center;
+    }
+  
+    .plan {
+      display: inline-block;
+      width: 30%;
+      vertical-align: middle;
+      min-width: 13rem;
+      max-width: 25rem;
+    }
+  
+    .plan--highlighted {
+      box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
     }
 }
 
-@media (min-width: 60rem) {
+/* @media (min-width: 60rem) {
     #product-overview {
         height: 50vh;
         background-position: 50% 25%;
@@ -61,94 +132,6 @@ body {
     #product-overview h1 {
         font-size: 5rem;
     }
-}
-
-.section-title {
-    color: #ff1b68;
-    /* font-family: inherit; */
-    text-align: center;
-    
-}
-
-.plan__list {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-}
-
-.plan {
-    background-color: #d5ffdc;
-    text-align: center;
-    padding: 1rem;
-    margin: 0.5rem;
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
-}
-
-.plan--highlighted {
-    background: #19b84c;
-    color: white;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-}
-
-.plan__annotation {
-    background: white;
-    color: #19b84c;
-    padding: 0.5rem;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-}
-
-.plan__title {
-    color: #0e4f1f;
-}
-
-.plan__price {
-    color: #858585;
-}
-
-.plan--highlighted .plan__title {
-    color: white;
-}
-
-.plan--highlighted .plan__price {
-    color: #0e4f1f;
-}
-
-.plan__features {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-/* .plan__features li {
-    margin: 8px;
-} */
-
-.plan__feature {
-    margin: 0.5rem 0;
-}
-
-/* .button {
-    background: #0e4f1f;
-    color: white;
-    font: inherit;
-    border: 1.5px solid #0e4f1f;
-    padding: 8px;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.button:hover,
-.button:active {
-    background: white;
-    color: #0e4f1f;
-}
-
-.button:focus {
-    outline: none;
 } */
 
 #key-features {
