--- a/responsiveness/main.css
+++ b/responsiveness/main.css
@@ -152,12 +152,6 @@ body {
     text-align: center;
 }
 
-.key-feature {
-    display: inline-block;
-    width: 30%;
-    vertical-align: top;
-}
-
 .key-feature__image {
     background: #ffcede;
     width: 128px;
@@ -175,111 +169,14 @@ body {
     font-size: 1.2rem;
 }
 
-/* h1 {
-    font-family: sans-serif;
-} */
-
-/* .main-header {
-    width: 100%;
-    background: #0a0a0a;
-    padding: 8px 16px;
+@media (min-width: 40rem) {
+    .key-feature {
+      display: inline-block;
+      width: 30%;
+      max-width: 25rem;
+      vertical-align: top;
+    }
 }
-
-.main-header > div {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.main-header__brand {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 22px;
-}
-
-.main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 74px);
-    vertical-align: middle;
-}
-
-.main-nav__items {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.main-nav__item {
-    display: inline-block;
-    margin: 0 16px;
-}
-
-.main-nav__item a {
-    text-decoration: none;
-    color: #0e4f1f;
-    font-weight: bold;
-    padding: 3px 0;
-}
-
-/* .main-nav__item a::after {
-    content: " (link)";
-    color: red;
-} */
-
-/* .main-nav__item a:hover,
-.main-nav__item a:active {
-    color: white;
-    border-bottom: 5px solid white;
-}
-
-.main-nav__item--cta a {
-    color: white;
-    background: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
-}
-
-.main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
-    color: #ff1b68;
-    background: white;
-    border: none;
-}
-
-.main-footer {
-    background: black;
-    padding: 32px;
-    margin-top: 48px;
-}
-
-.main-footer__links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-
-.main-footer__link {
-    display: inline-block;
-    margin: 0 16px;
-}
-
-.main-footer__link a {
-    color: white;
-    text-decoration: none;
-}
-
-.main-footer__link a:hover,
-.main-footer__link a:active {
-    color: #ccc;
-} */
-
-
-/* p::first-letter {
-    color: red;
-    font-size: 20px;
-} */
 
 .modal {
     position: fixed;
