--- a/responsiveness/start-hosting/start-hosting.css
+++ b/responsiveness/start-hosting/start-hosting.css
@@ -32,21 +32,21 @@ main {
     vertical-align: bottom;
 }
 
-/* .signup-form input:not([type="checkbox"]),
+.signup-form input:not([type="checkbox"]),
 .signup-form select {
     border: 1px solid #ccc;
     padding: 0.2rem 0.5rem;
     font: inherit;
-} */
+}
 
-/* .signup-form input:focus,
+.signup-form input:focus,
 .signup-form select:focus {
     outline: none;
     background: #d8f3df;
     border-color: #2ddf5c;
-} */
+}
 
-/* .signup-form input[type="checkbox"] {
+.signup-form input[type="checkbox"] {
     border: 1px solid #ccc;
     background: white;
     width: 1rem;
@@ -54,16 +54,23 @@ main {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-} */
+}
 
-/* .signup-form input[type="checkbox"]:checked {
+.signup-form input[type="checkbox"]:checked {
     background: #2ddf5c;
     border: #0e4f1f;
-} */
+}
 
 .signup-form button[type="submit"] {
     display: block;
     margin-top: 1rem;
+}
+
+.signup-form input.invalid,
+.signup-form select.invalid,
+.signup-form :invalid {
+    border-color: red !important;
+    background: #faacac;
 }
 
 @media (min-width: 40rem) {
