--- a/responsiveness/shared.css
+++ b/responsiveness/shared.css
@@ -159,11 +159,14 @@ main {
     margin: 0;
     padding: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .main-footer__link {
-    display: block;
-    margin: 1rem 0;
+    /* display: block; */
+    margin: 0.5rem 0;
 }
 
 .main-footer__link a {
@@ -191,9 +194,13 @@ main {
     width: 90%;
     height: 100%;
     list-style: none;
-    margin: 10% auto;
+    margin: 0 auto;
     padding: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
   
 .mobile-nav__item {
@@ -238,7 +245,12 @@ main {
 
 @media (min-width: 40rem) {
     .main-footer__link {
-        display: inline-block;
+        /* display: inline-block; */
         margin: 0 1rem;
+    }
+
+    .main-footer__links {
+        flex-direction: row;
+        justify-content: center;
     }
 }
