--- a/responsiveness/main.css
+++ b/responsiveness/main.css
@@ -107,18 +107,27 @@ body {
     .plan__list {
       width: 100%;
       text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   
     .plan {
-      display: inline-block;
+      /* display: inline-block; */
       width: 30%;
-      vertical-align: middle;
+      /* vertical-align: middle; */
       min-width: 13rem;
       max-width: 25rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 28rem;
     }
   
     .plan--highlighted {
       box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+      height: 30rem;
+      z-index: 10;
     }
 }
 
@@ -170,10 +179,15 @@ body {
 
 @media (min-width: 40rem) {
     .key-feature {
-      display: inline-block;
+      /* display: inline-block; */
       width: 30%;
       max-width: 25rem;
-      vertical-align: top;
+      /* vertical-align: top; */
+    }
+
+    .key-feature__list {
+      display: flex;
+      justify-content: center;
     }
 }
 
