--- a/flexbox/main.css
+++ b/flexbox/main.css
@@ -24,8 +24,8 @@ body {
     flex-wrap: wrap;
     /*flex-flow: row wrap;*/
     align-items: center;
-    justify-content: center;
-    align-content: center;
+    justify-content: flex-start;
+    /* align-content: center; */
   }
 
 .item-1 {
