--- a/expert/shared.css
+++ b/expert/shared.css
@@ -6,18 +6,25 @@
     box-sizing: border-box;
 }
 
-/* html {
-    width: 100%;
-} */
+html {
+    height: 100%;
+}
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserat', sans-serif;
     margin: 0;
+    display: grid;
+    grid-template-rows: 3.5rem auto fit-content(8rem);
+    grid-template-areas: "header"
+                         "main"
+                         "footer";
+    /* padding-top: 3.5rem; */
+    height: 100%;
 }
 
 main {
-    min-height: calc(100vh - 3.5rem - 8rem);
-    margin-top: 3.5rem;
+    /* grid-row: 2 / 3; */
+    grid-area: main;
 }
 
 .backdrop {
@@ -152,6 +159,8 @@ main {
     background: black;
     padding: 2rem;
     margin-top: 3rem;
+    /* grid-row: 3 / 4; */
+    grid-area: footer;
 }
 
 .main-footer__links {
