--- a/css-grid/main.css
+++ b/css-grid/main.css
@@ -1,20 +1,26 @@
 .container {
     margin: 20px;
     display: grid;
-    height: 500px;
+    height: 800px;
+    width: 800px;
     /* grid-template-columns: 200px 10rem 20% 1fr; */
-    grid-template-columns: repeat(4, 25%);
-    grid-template-rows: 5rem minmax(10px, auto) 100px;
+    grid-template-columns: repeat(4, 20%);
+    grid-template-rows: 5rem minmax(10px, 20rem) 100px;
     /* grid-column-gap: 20px;
     grid-row-gap: 10px; */
     grid-gap: 10px 20px;
     grid-template-areas: "header header header header" 
                          ". . main main"
                          "footer footer footer footer";
+    justify-items: stretch;
+    align-items: stretch;
+    /* justify-content: center;
+    align-content: end; */
 }
 
 .el1 {
     background: rgba(255, 154, 72, 0.5);
+    grid-column: 2;
 }
 
 .el2 {
@@ -27,6 +33,8 @@
     /* grid-row: 2 / span 1; */
     z-index: 1;
     grid-area: main;
+    /* justify-self: center;
+    align-self: center; */
 }
 
 .el3 {
