--- a/css-grid/main.css
+++ b/css-grid/main.css
@@ -2,7 +2,7 @@
     margin: 20px;
     display: grid;
     height: 800px;
-    width: 800px;
+    /* width: 800px; */
     /* grid-template-columns: 200px 10rem 20% 1fr; */
     grid-template-columns: repeat(4, 20%);
     grid-template-rows: 5rem minmax(10px, 20rem) 100px;
@@ -10,7 +10,7 @@
     grid-row-gap: 10px; */
     grid-gap: 10px 20px;
     grid-template-areas: "header header header header" 
-                         ". . main main"
+                         ". side main main"
                          "footer footer footer footer";
     justify-items: stretch;
     align-items: stretch;
@@ -18,9 +18,20 @@
     align-content: end; */
 }
 
+@media (max-width: 40rem) {
+    .container {
+      grid-template-rows: [hd-start] 5rem [hd-end row-2-start] minmax(10px, 20rem) [row-2-end row-3-start] 150px [row-3-end row-4-start] 100px [row-4-end];
+      grid-template-areas: "header header header header" 
+                           "main main main main"
+                           "side side side side"
+                           "footer footer footer footer";
+    }
+}
+
 .el1 {
     background: rgba(255, 154, 72, 0.5);
     grid-column: 2;
+    grid-area: side;
 }
 
 .el2 {
