--- a/expert/transformations/shared.css
+++ b/expert/transformations/shared.css
@@ -30,12 +30,14 @@ main {
 .backdrop {
     display: none;
     position: fixed;
+    opacity: 0;
     top: 0;
     left: 0;
     z-index: 100;
     width: 100vw;
     height: 100vh;
     background: rgba(0,0,0,0.5);
+    transition: opacity 0.2s linear;
 }
 
 .main-header {
@@ -124,6 +126,10 @@ main {
     border-bottom: 5px solid white;
 }
 
+.main-nav__item--cta {
+    animation: wiggle 400ms 3s 8 ease-out none;
+  }
+
 .main-nav__item--cta a,
 .mobile-nav__item--cta a {
     color: white;
@@ -189,7 +195,8 @@ main {
 }
 
 .mobile-nav {
-    display: none;
+    /* display: none; */
+    transform: translateX(-100%);
     position: fixed;
     z-index: 101;
     top: 0;
@@ -197,6 +204,7 @@ main {
     background: white;
     width: 80%;
     height: 100vh;
+    transition: transform 300ms ease-out;
 }
   
 .mobile-nav__items {
@@ -250,6 +258,8 @@ main {
 
 .open {
     display: block !important;
+    opacity: 1 !important;
+    transform: translateY(0) !important;
 }
 
 @media (min-width: 40rem) {
@@ -261,5 +271,17 @@ main {
     .main-footer__links {
         flex-direction: row;
         justify-content: center;
+    }
+}
+
+@keyframes wiggle {
+    0% {
+        transform: rotateZ(0);
+    }
+    50% {
+        transform: rotateZ(-10deg);
+    }
+    100% {
+        transform: rotateZ(10deg);
     }
 }
