--- a/expert/transformations/shared.css
+++ b/expert/transformations/shared.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Anton');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
+:root {
+    --dark-green: #0e4f1f;
+    --highlight-color: #ff1b68;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -11,6 +16,24 @@ html {
 }
 
 body {
+    font-family: "Montserrat", sans-serif;
+    margin: 0;
+    padding-top: 3.5rem;
+}
+  
+@supports (display: grid) {
+    body {
+      display: grid;
+      grid-template-rows: 3.5rem auto fit-content(8rem);
+      grid-template-areas: "header"
+                           "main"
+                           "footer";
+      padding-top: 0;
+      height: 100%;
+    }
+}
+
+/* body {
     font-family: 'Montserat', sans-serif;
     margin: 0;
     display: grid;
@@ -18,9 +41,9 @@ body {
     grid-template-areas: "header"
                          "main"
                          "footer";
-    /* padding-top: 3.5rem; */
+    padding-top: 3.5rem;
     height: 100%;
-}
+} */
 
 main {
     /* grid-row: 2 / 3; */
@@ -48,6 +71,9 @@ main {
     background: #2ddf5c;
     padding: 0.5rem 1rem;
     z-index: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -115,7 +141,7 @@ main {
 .main-nav__item a,
 .mobile-nav__item a {
     text-decoration: none;
-    color: #0e4f1f;
+    color: var(--dark-green);
     font-weight: bold;
     padding: 0.2rem 0;
 }
@@ -133,7 +159,7 @@ main {
 .main-nav__item--cta a,
 .mobile-nav__item--cta a {
     color: white;
-    background: #ff1b68;
+    background: var(--highlight-color);
     padding: 0.5rem 1rem;
     border-radius: 8px;
 }
@@ -142,7 +168,7 @@ main {
 .main-nav__item--cta a:active,
 .mobile-nav__item--cta a:hover,
 .mobile-nav__item--cta a:active {
-    color: #ff1b68;
+    color: var(--highlight-color);
     background: white;
     border: none;
 }
@@ -229,10 +255,10 @@ main {
 }
 
 .button {
-    background: #0e4f1f;
+    background: var(--dark-green, #0e4f1f);
     color: white;
     font: inherit;
-    border: 1.5px solid #0e4f1f;
+    border: 1.5px solid var(--dark-green);
     padding: 0.5rem;
     border-radius: 8px;
     font-weight: bold;
@@ -242,7 +268,7 @@ main {
 .button:hover,
 .button:active {
     background: white;
-    color: #0e4f1f;
+    color: var(--dark-green);
 }
 
 .button:focus {
