--- a/expert/SASS/main.css
+++ b/expert/SASS/main.css
@@ -19,7 +19,7 @@ body {
 
 .sass-introduction {
   border: 0.05rem solid #521751;
-  background: #fae5ff;
+  background: #f7e1f6;
   padding: 2rem;
   text-align: center;
   box-shadow: 0.2rem 0.2rem 0.1rem #ccc;
@@ -31,7 +31,7 @@ body {
 
 .sass-details {
   border: 0.05rem solid #521751;
-  background: #fae5ff;
+  background: #f7e1f6;
   padding: 1rem;
   text-align: center;
   margin: 2rem 0;
@@ -71,9 +71,6 @@ body {
 @media (min-width: 40rem) {
   html {
     font-size: 125%; }
-
-  .container {
-    padding: 3rem 0; }
 
   .sass-introduction,
   .sass-details {
