--- a/expert/SASS/main.scss
+++ b/expert/SASS/main.scss
@@ -1,13 +1,30 @@
-// $main-color:orange;
-$colors: (main: #521751, secondary: #fa923f);
-$border-default: 0.05rem solid map-get($colors, main);
-$size-default: 1rem;
-$size-tiny: 0.2rem;
+@import "_variables.scss";
 
-@import "typography.css";
+@import "typography.scss";
+
+@mixin display-flex() {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+@mixin media-min-width($width) {
+  @media (min-width: $width) {
+    @content;
+  }
+}
 
 html {
   font-size: 94.75%;
+
+  // @media (min-width: 40rem) {
+  //   font-size: 125%;
+  // }
+
+  @include media-min-width(40rem) {
+    font-size: 125%;
+  }
 }
 
 body {
@@ -16,10 +33,7 @@ body {
 }
 
 .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
+  @include display-flex();
   flex: {
     direction: column;
     wrap: nowrap;
@@ -29,46 +43,45 @@ body {
   box-sizing: border-box;
 }
 
-.sass-introduction {
+.sass-section {
   border: $border-default;
   background: lighten(map-get($colors, main), 72%);
   padding: $size-default * 2;
   text-align: center;
-  box-shadow: $size-tiny $size-tiny $size-tiny / 2 #ccc;
   width: 90%;
   box-sizing: border-box;
+  @include media-min-width(40rem) {
+    width: 30rem;
+  }
 }
 
-.sass-introduction p {
-  margin: 0;
+.sass-introduction {
+  @extend .sass-section;
+  box-shadow: $size-tiny $size-tiny $size-tiny / 2 #ccc;
+
+  p {
+    margin: 0;
+  }
 }
 
 .sass-details {
-  border: $border-default;
-  background: lighten(map-get($colors, main), 72%);
-  padding: $size-default;
-  text-align: center;
+  @extend .sass-section;
   margin: $size-default * 2 0;
-  width: 90%;
-  box-sizing: border-box;
 }
 
 .section-header {
   border-bottom: $size-tiny / 4 solid map-get($colors, main);
-}
 
-.section-header h1 {
-  margin: 0 0 $size-default 0;
+  h1 {
+    margin: 0 0 $size-default 0;
+  }
 }
 
 .documentation-links {
   list-style: none;
   margin: $size-default 0 0 0;
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
+  @include display-flex();
   flex-direction: column;
 
   li {
@@ -82,27 +95,13 @@ body {
     display: block;
     padding: $size-tiny;
     border: $border-default;
-  }
 
-  .documentation-link:hover,
-  .documentation-link:active {
-    color: white;
-    background: map-get($colors, secondary);
-    border-color: map-get($colors, secondary);
-  }
-}
-
-@media (min-width: 40rem) {
-  html {
-    font-size: 125%;
-  }
-
-  // .container {
-  //   padding: 3rem 0;
-  // }
-
-  .sass-introduction,
-  .sass-details {
-    width: 30rem;
+    &:hover,
+    &:active {
+      color: white;
+      background: map-get($colors, secondary);
+      border-color: map-get($colors, secondary);
+    }
   }
 }
+
